# rusty-links

./: .gitattributes  .gitignore  Cargo.toml  NOTES.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs
src/analysis/: mod.rs  utils.rs
src/analysis/rl_analysis/: mod.rs  rl_args_resolver.rs  rl_call_resolver.rs  rl_context.rs  rl_graph.rs  rl_petgraph.rs  rl_visitor.rs  rl_weight_resolver.rs
src/instrument/: cli.rs  driver.rs  mod.rs  plugin.rs
src/utils/: mod.rs  text_mod.rs
tests/: test_snippets_call_with_no_args.rs  test_snippets_fn_comes_from_return.rs  test_snippets_simple.rs  test_snippets_simple_call.rs  test_snippets_simple_call_closure.rs  test_snippets_simple_call_const.rs  test_snippets_simple_call_fn.rs  test_snippets_simple_call_method_mut_ref_self.rs  test_snippets_simple_call_method_ref_mut_self.rs  test_snippets_simple_call_method_ref_self.rs  test_snippets_simple_call_method_self.rs  test_snippets_simple_call_mut_static.rs  test_snippets_simple_call_static.rs  test_snippets_simple_call_switch.rs  test_workspaces.rs  test_workspaces_project_maybe_conflict_closure.rs  test_workspaces_simple_project_with_workspace.rs  test_workspaces_simple_project_with_workspace_with_specified_bin.rs  utils.rs
tests/snippets/call_with_no_args/: monomorphized_args.rs  statically_unknown.rs  wrapper.rs
tests/workspaces/first/: mir  (+1 more)
tests/workspaces/simple_project_with_workspace_with_specified_bin/: Cargo.toml
tests/workspaces/simple_project_with_workspace_with_specified_bin/.rl_serde/: crate_a.rlg  crate_b.rlg  main.rlg  rlg_merged
(+82 files in other folders)
