[package]
name = "rustc-ex"
version = "0.1.0-nightly-2024-10-18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-rustc-ex"

[[bin]]
name = "rustc-ex-driver"

[features]
default = []
test-mode = []

[dependencies]
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rustworkx-core = "0.15.1"
log = "0.4"
cargo_metadata = "0.14"
serde_json = "1"
rustc_tools_util = "0.1"
# rustc_plugin = "0.10.0-nightly-2024-05-20"
# rustc-instrument = { path = "../rustc-instrument/rustc-instrument" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
toml = "0.7"
